BidListService created and done